--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-spring": "^9.4.1",
     "react-transition-group": "^4.4.2",
     "recharts": "^2.1.6",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.0",
     "redux-toolkit": "^1.1.2",
     "sass": "^1.43.4",
